# modorganizer-fnistool

./: .editorconfig  .gitignore  CMakeLists.txt  FNISTool.py  FNISTool_en.ts  appveyor.yml
src/: CMakeLists.txt  FNISPatches.py  FNISTool.py  FNISToolReset.py  FNISTool_en.ts  PyQt5TranslationMacros.cmake
